Day11 Backtracking problems